<resources>
    <string name="app_name">Dalbit</string>
    <string name="title_activity_course_mos">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_people">People</string>
    <string name="title_talk">Talk</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>

    <string name="professor">%1$s 교수</string>
    <string name="mon">%1$s월</string>
</resources>