<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_iconmonstr_user_22"
        android:title="@string/title_people" />

    <item
        android:id="@+id/navigation_talk"
        android:icon="@drawable/ic_iconmonstr_mail_thin"
        android:title="@string/title_talk"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_iconmonstr_menu_thin"
        android:title="@string/title_more"/>

</menu>