<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gr.assignment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_course_info"
            app:destination="@id/navigation_course_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_course_info"
        android:name="com.gr.assignment.ui.home.CourseInfoFragment"
        android:label="Course"
        tools:layout="@layout/fragment_course_info"/>

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.gr.assignment.ui.people.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/navigation_talk"
        android:name="com.gr.assignment.ui.talk.TalkFragment"
        android:label="@string/title_talk"
        tools:layout="@layout/fragment_talk"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gr.assignment.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.gr.assignment.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more"/>

</navigation>